fix: wrap

--- a/source/style/main.css
+++ b/source/style/main.css
@@ -1108,10 +1108,6 @@
 }
 
 @media screen and (max-width: 375px){
-    .wrap {
-        height: 100vh;
-    }
-    
     
     .header {
         width: 100%;
